--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://ProxyBoy11.github.io/skill-swap",
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
